<resources>
    <string name="Icon">Icon</string>
    <string name="plate_name">Dish Name</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="entrance">Entrance</string>
    <string name="main_dish">Main Dish</string>
    <string name="form">Form</string>
    <string name="type_of_plate">Type of Dish</string>
    <string name="image_of_meal">Dish Image</string>
    <string name="price">Price</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="dish_disponibility">Dish availability schedule</string>
    <string name="dish_price">Dish Price</string>
    <string name="dish_ingredients">Dish Ingredients</string>
    <string name="preview_update">Save Another</string>
    <string name="dish_name">Dish Name</string>
    <string name="preparation_time_acronym">P.Time</string>
    <string name="type">Type</string>
    <string name="schedule">Schedule</string>
    <string name="dish_icon_description">icon of dish in the register</string>
    <string name="meal">Meals</string>
    <string name="drink">Drink Name</string>
    <string name="drink_ingredients">Drink Ingredients</string>
    <string name="drink_price">Drink Price</string>
    <string name="drink_image">Drink Image</string>
    <string name="clean">Clean</string>
    <string name="exit">Exit</string>
    <string name="drinks">Drinks</string>

    <string name="app_name">Lab3ServicesGr04</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register</string>
    <string name="title_activity_principal">Menu</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Menu App</string>
    <string name="nav_header_subtitle">Options</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="profile">Profile</string>
    <string name="dishes">Dishes</string>
    <string name="configuration">Configuration</string>
    <string name="about_us">About us</string>


    <string name="preference_file_key" translatable="false">co.edu.udea.compumovil.gr04_20182.lab3.PREFERENCE_FILE_KEY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="meals_and_drinks">Meals And Drinks</string>
    <string name="login">Login</string>
    <string name="change_image">Change Image</string>
    <string name="pepito_perez">Pepito Perez</string>
    <string name="pepito_gmail_com">pepito@gmail.com</string>
    <string name="save_changes">Save Changes</string>
    <string name="dish_schedule">Dish Schedule</string>
    <string name="dish_type">Dish Type</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="name">Name</string>
    <string name="names">Names</string>
    <string name="dishname">dishName</string>
    <string name="type_of_dish">Type of dish</string>
    <string name="dish_time">Dish Time</string>
    <string name="drink_name">Drink Name</string>
    <string name="search">Search</string>
    <string name="close_session">Logout</string>
    <string name="save_login">Save Login</string>
    <string name="maintain_login">keep session started</string>
    <string name="auth_not">Authorize Notifications</string>
    <string name="allow_not">allow the presence of notifications</string>
    <string name="aut_sound">Authorize Sound</string>
    <string name="auth_sound">allow the sound of notifications</string>
    <string name="update_settings">Update settings</string>
    <string name="update_interval">Update Interval</string>
    <string name="frequency_update">Frequency of updates for the data</string>

    <string name="about_us_description">This is an App designed by movi industries with the objective of giving the user access to Dominos menu and include new items that weren´t added by the Developers</string>

    <string name="user">User</string>
</resources>
