<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DishDetailFragment">

    <ImageView
        android:id="@+id/detail_dish_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/coke" />

    <TextView
        android:id="@+id/dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_name" />

    <TextView
        android:id="@+id/dish_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_schedule" />

    <TextView
        android:id="@+id/dish_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_type" />

    <TextView
        android:id="@+id/dish_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_time" />

    <TextView
        android:id="@+id/dish_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_price" />

    <TextView
        android:id="@+id/dish_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_ingredients" />

    <Button
        android:id="@+id/dish_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favorites" />

</LinearLayout>